beta 4
======
- Brought ActiveRecordBase.Generic inline with ActiveRecordBase.  This is a breaking change.  
  Some methods (FindAll, DeleteAll) have been renamed FindAllGeneric, DeleteAllGeneric.  In
  previous revisions users were forced to have an accessible DeleteAll/FindAll method on the 
  object when inheriting from ActiveRecordBase<>.  New methods with the Generic suffix 
  on their names allow the users to present the same methods in their generic and non generic 
  classes, and by default ActiveRecordBase<> objects will have no accessible static methods 
  just like their ActiveRecordBase counterparts.

- Updated DeleteAll(Type targetType, IEnumerable pkValues) to support non int primary keys

- Add more hookable methods.

- Refactored Validation support to use NHibernate.IValidatable

- Brought ActiveRecordMediator.Generic inline with ActiveRecordMediator.  This is a breaking 
  change (removal of a few methods/renaming of a few existing).

- Add import support (kudos to Dan Burnea)
  [ActiveRecord, Import(typeof(ImportClassRow), "ImportClassRow")]
  public class ImportClass : ActiveRecordBase

beta 3
======

- Added FindAllByProperty, FindFirst and FindOne

- Added DeleteAll(type, where) (kudos to G. Richard Bellamy)

- Applied patch from Josh Robb. Added support for hooks on ActiveRecordBase<T>.

- DifferentDatabaseScope: so you can open a session using a different dbconnection
  and persist your object model. Very experimental version

- Fixed: Support for multiple databases was completely broken.

- An implementation of ISessionFactoryHolder can be specified through the configuration, attribute sessionfactoryholdertype
  on the config node.

- Added: ActiveRecordBase<T> - a generic form a ActiveRecordBase which relieves the need to re-write
  all the base static methods to hide the type parameter and cast the result. Generics do it for you.

- Added: ActiveRecordStarter.CreateSchemaFromFile(filename) as an alternative to CreateSchema. 
