@@ -392,6 +392,7 @@
     <Compile Include="Framework\ActiveRecordBase.Generic.cs" />
     <Compile Include="Framework\ActiveRecordHooksBase.cs" />
     <Compile Include="Framework\ARSchemaCreator.cs" />
+    <Compile Include="Framework\ActiveRecordValidationBase.Generic.cs" />
     <Compile Include="Framework\Internal\Model\ImportModel.cs" />
     <Compile Include="Framework\Queries\IActiveRecordQuery.Generic.cs" />
     <Compile Include="Framework\Queries\ScalarQuery.Generic.cs" />
