@@ -1,5 +1,6 @@
 beta 4
 ======
+- Added ActiveRecordValidationBase<> to support validation on Generic AR classes
 - Brought ActiveRecordBase.Generic inline with ActiveRecordBase.  This is a breaking change.  
   Some methods (FindAll, DeleteAll) have been renamed FindAllGeneric, DeleteAllGeneric.  In
   previous revisions users were forced to have an accessible DeleteAll/FindAll method on the 
